--- a/index.html
+++ b/index.html
@@ -226,8 +226,11 @@
         }
     </style>
 
+    <!-- UPDATED SCRIPT ORDER: Load dependencies first, then modules in order -->
     <script src="js/calculator.js"></script>
+    <script src="js/canvas-drawing.js"></script>
     <script src="js/preview.js"></script>
+    
     <script>
         // Enhanced initialization with error handling and performance monitoring
         document.addEventListener('DOMContentLoaded', function() {
