--- a/index.html
+++ b/index.html
@@ -226,7 +226,8 @@
         }
     </style>
 
-    <!-- UPDATED SCRIPT ORDER: Load dependencies first, then modules in order -->
+    <!-- NEW 4-FILE SCRIPT ORDER: Data layer first, then UI, then rendering -->
+    <script src="js/pattern-data.js"></script>
     <script src="js/calculator.js"></script>
     <script src="js/canvas-drawing.js"></script>
     <script src="js/preview.js"></script>
