--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="container">
         <div class="page-title">
             <h1 id="pageTitle" style="display: none;">Wallpaper Preview Calculator</h1>
-            <p id="pageSubtitle">Enter wall dimensions to estimate how much you'll need to purchase. Submit results if you'd like to receive a quote. We'll be in touch within one business day. (probably sooner)</p>
+            <p id="pageSubtitle">Enter wall dimensions to estimate how much you'll need to purchase.<br>Submit results if you'd like to receive a quote.<br>We'll be in touch within one business day. (probably sooner)</p>
         </div>
 
         <div class="measuring-guide">
