--- a/index.html
+++ b/index.html
@@ -208,12 +208,17 @@
         }
     </style>
 
-    <!-- JavaScript modules in correct order -->
-    <script src="js/pattern-data.js"></script>
-    <script src="js/calculator.js"></script>
-    <script src="js/canvas-drawing.js"></script>
-    <script src="js/preview.js"></script>
-    <script src="js/pdf-generation.js"></script>
+<!-- JavaScript modules in correct order -->
+<script src="js/pattern-data.js"></script>
+<script src="js/calculator.js"></script>
+<!-- Canvas drawing modules -->
+<script src="js/canvas-drawing-core.js"></script>
+<script src="js/canvas-drawing-patterns.js"></script>
+<script src="js/canvas-drawing-sections.js"></script>
+<script src="js/canvas-drawing.js"></script>
+<!-- End canvas drawing modules -->
+<script src="js/preview.js"></script>
+<script src="js/pdf-generation.js"></script>
     
     <script>
         // Enhanced initialization with auto-resize integration
