--- a/index.html
+++ b/index.html
@@ -234,9 +234,8 @@
                             </div>
 
                             <div class="form-group checkbox-group">
-                                <label class="checkbox-label">
+                                <label>
                                     <input type="checkbox" id="newsletterSignup" name="newsletterSignup">
-                                    <span class="checkmark"></span>
                                     Check this box to sign up for our monthly newsletter.
                                 </label>
                             </div>
